2005-08-04  Carl Worth  <cworth@cworth.org>

	Originally 2005-07-13  Carl Worth  <cworth@cworth.org>

	Reviewed by: otaylor

	* src/cairo-ft-private.h: Export opaque cairo_ft_unscaled_font_t
	and change _cairo_ft_unscaled_font_[un]lock_face to accept
	cairo_ft_unscaled_font_t rather than cairo_unscaled_font_t.
	
	* src/cairo-font-subset.c: (_cairo_font_subset_create),
	(cairo_pdf_ft_font_generate): Cast explicitly to
	cairo_ft_unscaled_font_t to track change in prototype of
	_cairo_ft_unscaled_font_[un]lock_face.

	* src/cairo-ft-font.c: Lots of renaming to use consistent
	namespacing:

		ft_font_transform_t -> cairo_ft_font_transform_t
		ft_font_face_t	    -> cairo_ft_font_face_t
		ft_unscaled_font_t  -> cairo_ft_unscaled_font_t

	Add missing _cairo prefix to many functions.
	
	Disambiguate _ft_scaled_font_create and
	_cairo_ft_scaled_font_create by renaming the former to
	_cairo_ft_scaled_font_create_for_unscaled.

2005-08-03  Carl Worth  <cworth@cworth.org>

	Fix for bug #3951:

	* configure.in: Add new _CHECK_FUNCS_WITH_FLAGS to abstract out
	the pain of temporarily setting flags for AC_CHECK_FUNCS. Use this
	to check for the existence of FcFini.
	
	* test/cairo-test.c: (cairo_test_expecting): Make call to FcFini
	conditional on HAVE_FCFINI.
	
	* test/text-cache-crash.c: (main): Remove stale comment about
	cleaning up memory which is now handled by cairo-test.c.

2005-08-01  Owen Taylor  <otaylor@redhat.com>

	reviewed by: cworth

	* src/cairo-gstate.c src/cairo-gstate-private.h: Store the
	inverse CTM at the time of cairo_gstate_set_source() to 
	"lock" the user space matrix.

	* src/cairo-gstate.c: Move the source pattern transformation
	to the outside of _cairo_gstate_clip_and_composite_trapezoids()
	instead of doing it at the leaves.

	* test/source-surface-scale-paint.c: Change size of output
	surface for aesthetics.

	* test/source-surface-scale-paint-ref.png: Updated to correspond
	to the current definition.
	
	* test/Makefile.am (XFAIL_TESTS):